[gd_scene load_steps=8 format=2]

[ext_resource path="res://Shaders/grayscale.shader" type="Shader" id=1]
[ext_resource path="res://Image-assets/charPanel-female.png" type="Texture" id=2]
[ext_resource path="res://Scripts/bowman_recruiting.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/grayscale = false

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 1
outline_color = Color( 0.0980392, 0.0705882, 0.0705882, 1 )
extra_spacing_char = 2
font_data = SubResource( 3 )

[node name="bowman" type="Panel"]
margin_left = 33.5807
margin_top = 71.8234
margin_right = 120.581
margin_bottom = 188.823
rect_pivot_offset = Vector2( 55.1662, 57.8853 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bowmanFace" type="TextureButton" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -45.5
margin_right = 45.5
margin_bottom = 45.5
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sweep" type="TextureProgress" parent="bowmanFace"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.87451 )
anchor_right = 1.0
anchor_bottom = 1.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bowmenRecruit" type="Timer" parent="bowmanFace"]
one_shot = true

[node name="counter" type="MarginContainer" parent="bowmanFace"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -28.0
custom_constants/margin_right = 9
custom_constants/margin_top = -3
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="bowmanFace/counter"]
margin_left = 5.0
margin_top = 3.0
margin_right = 101.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "[0.0]"
align = 2

[node name="queueNo" type="MarginContainer" parent="bowmanFace"]
anchor_right = 1.0
custom_constants/margin_right = 5
custom_constants/margin_left = 9
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="queueSize" type="Label" parent="bowmanFace/queueNo"]
margin_left = 9.0
margin_right = 105.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "In queue: 0"
[connection signal="pressed" from="bowmanFace" to="." method="_on_bowmanFace_pressed"]
[connection signal="timeout" from="bowmanFace/bowmenRecruit" to="." method="_on_bowmenRecruit_timeout"]
